<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Symbol or Company</string>
    <string name="label_last_trade_price">Last Trade:</string>
    <string name="label_days_low_price">Days Low:</string>
    <string name="label_days_high_price">Days High:</string>
    <string name="label_change">Change:</string>
    <string name="label_percent_change">% Change:</string>
    <string name="empty_list">No Data!</string>
    <string name="activity_name_searchable">SearchableActivity</string>

</resources>